--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,9 @@ jobs:
 
       - name: Run Tests
         run: pytest tests/test*
+
+      - name: Install tox
+        run: pip3 intsall tox
+
+      - name: Run tox tests
+        run: tox
