Fixed typo in main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         run: pytest tests/test*
 
       - name: Install tox
-        run: pip3 intsall tox
+        run: pip3 install tox
 
       - name: Run tox tests
         run: tox
