--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,11 +38,12 @@ jobs:
           --outdir dist/
 
       - name: Publishto Test PyPI
-        uses: pypa/gh-action-pypi-publish@publish/v1
+        uses: pypa/gh-action-pypi-publish@publish
         with:
           password: ${{ secrets.test_pypi_password }}
           repository_url: https://test.pypi.org/legacy/
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@publish
         with:
+          user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
