--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 name: Publish Stash cache
 on:
   push:
-    branches: [publish]
+    branches: [master]
 
 jobs:
   build-n-publish:
@@ -9,40 +9,21 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
-      - name: Initialize Python 3.6
-        uses: actions/setup-python@v1
-        with:
-          python-version: 3.6.0
 
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip3 install pytest
+      - name: Updating PIP
+        run: pip3 install --upgrade setuptools
 
       - name: Run Tests
         run: pytest tests/test*
-
-      - name: Install pypa/build
-        run: >-
-          python -m
-          pip install
-          build
-          --user
-
-      - name: Build binary wheel and a source tarball
-        run: >-
-          python -m
-          build
-          --sdist
-          --wheel
-          --outdir dist/
 
       - name: Publishto Test PyPI
         uses: pypa/gh-action-pypi-publish@publish/v1
         with:
           password: ${{ secrets.test_pypi_password }}
           repository_url: https://test.pypi.org/legacy/
+
       - name: Publish to PyPI
         uses: pypa/gh-action-pypi-publish@publish/v1
         with:
+          user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
