--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,13 +17,13 @@ jobs:
         run: pytest tests/test*
 
       - name: Publishto Test PyPI
-        uses: pypa/gh-action-pypi-publish@publish/v1
+        uses: pypa/gh-action-pypi-publish@master
         with:
           password: ${{ secrets.test_pypi_password }}
           repository_url: https://test.pypi.org/legacy/
 
       - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@publish/v1
+        uses: pypa/gh-action-pypi-publish@master
         with:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
