--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,11 @@ jobs:
       - name: Updating PIP
         run: pip3 install --upgrade setuptools
 
+      - name: Install pytest
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
+
       - name: Run Tests
         run: pytest tests/test*
 
